# decolorization

./: CMakeLists.txt
hue/: CMakeLists.txt  main.cpp
origin/: CMakeLists.txt  main.cpp
random/: CMakeLists.txt  main.cpp
rgb/: CMakeLists.txt  main.cpp
