CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
PROJECT("decolorize")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})
FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(EIGEN3_INCLUDE_DIR)

FIND_PACKAGE(OpenCV REQUIRED)

ADD_SUBDIRECTORY(origin)
ADD_SUBDIRECTORY(hue)
ADD_SUBDIRECTORY(random)
ADD_SUBDIRECTORY(rgb)
